clean img, btn fixed with a, hover z-index

--- a/znobot/css/_btn.scss
+++ b/znobot/css/_btn.scss
@@ -2,10 +2,13 @@
 @import 'mixin.scss';
 
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 160px;
     height: 46px;
     margin-left: 30px;
-    border: none;
+    // border: none;
     border-radius: 5px;
     outline: none;
     background: $color-block;
