--- a/znobot/css/style.scss
+++ b/znobot/css/style.scss
@@ -361,7 +361,7 @@ main {
             transform: translateY(-30px);
         }
     }
-    
+
     .shadow {
         position: absolute;
         top: 0;
@@ -437,7 +437,7 @@ main {
     cursor: pointer;
     background: rgba(0, 0, 0, 0.6);
     outline: none;
-    z-index: 3;
+    z-index: 4;
     transition: all 0.4s linear;
 }
 
